force-app/main/default/objects/Round__c/fields/AddedToMiley__c.field-meta.xml
<CustomField>
    <fullName>AddedToMiley__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added to Miley</label>
    <type>Checkbox</type>
</CustomField>