force-app/main/default/objects/Round__c/fields/Bin_Weighing__c.field-meta.xml
<CustomField>
    <fullName>Bin_Weighing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bin Weighing</label>
    <type>Checkbox</type>
</CustomField>