force-app/main/default/objects/Round__c/fields/Centre_of_Round__c.field-meta.xml
<CustomField>
    <fullName>Centre_of_Round__c</fullName>
    <label>Centre of Round</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>