force-app/main/default/objects/Round__c/fields/DataStatus__c.field-meta.xml
<CustomField>
    <fullName>DataStatus__c</fullName>
    <label>Miley Data Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not started</fullName>
                <default>true</default>
                <label>Not started</label>
            </value>
            <value>
                <fullName>Data collection in progress</fullName>
            </value>
            <value>
                <fullName>Ready for use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>