force-app/main/default/objects/Round__c/fields/Default_Driver__c.field-meta.xml
<CustomField>
    <fullName>Default_Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Driver</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Round</relationshipLabel>
    <relationshipName>Round</relationshipName>
    <type>Lookup</type>
</CustomField>