force-app/main/default/objects/Round__c/fields/Default_Driver_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Driver_Name__c</fullName>
    <formula>Default_Driver__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Driver Name</label>
    <type>Text</type>
</CustomField>