force-app/main/default/objects/Round__c/fields/Default_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Default_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Round</relationshipLabel>
    <relationshipName>Round</relationshipName>
    <type>Lookup</type>
</CustomField>