force-app/main/default/objects/Round__c/fields/Default_Vehicle_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Vehicle_Name__c</fullName>
    <formula>Default_Vehicle__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default_Vehicle_Name</label>
    <type>Text</type>
</CustomField>