force-app/main/default/objects/Round__c/fields/Depot__c.field-meta.xml
<CustomField>
    <fullName>Depot__c</fullName>
    <label>Depot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minerva Road</fullName>
            </value>
            <value>
                <fullName>Camley Street</fullName>
            </value>
            <value>
                <fullName>Hoxton</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Waterloo Hub</fullName>
            </value>
            <value>
                <fullName>Harriet Walk</fullName>
            </value>
            <value>
                <fullName>Oldbury</fullName>
            </value>
            <value>
                <fullName>Birmingham</fullName>
                <isActive>false</isActive>
                <label>Birmingham</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>