force-app/main/default/objects/Round__c/fields/EndDepot__c.field-meta.xml
<CustomField>
    <fullName>EndDepot__c</fullName>
    <label>End Depot</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>