force-app/main/default/objects/Round__c/fields/EndDepotIndex__c.field-meta.xml
<CustomField>
    <fullName>EndDepotIndex__c</fullName>
    <label>End Depot Index</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>