force-app/main/default/objects/Round__c/fields/Expected_Num_Tips__c.field-meta.xml
<CustomField>
    <fullName>Expected_Num_Tips__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The number of times a round is expected to tip. Used to calculate the round capacity.</description>
    <label>Expected Num Tips</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>