force-app/main/default/objects/Round__c/fields/Food_Pod__c.field-meta.xml
<CustomField>
    <fullName>Food_Pod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Food Pod</label>
    <type>Checkbox</type>
</CustomField>