force-app/main/default/objects/Round__c/fields/Food_Pod_Weekend__c.field-meta.xml
<CustomField>
    <fullName>Food_Pod_Weekend__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this round required a foodpod on weekend dispatches</inlineHelpText>
    <label>Food Pod Weekend</label>
    <type>Checkbox</type>
</CustomField>