force-app/main/default/objects/Round__c/fields/Food_Tip__c.field-meta.xml
<CustomField>
    <fullName>Food_Tip__c</fullName>
    <label>Food Tip</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tips</valueSetName>
    </valueSet>
</CustomField>