force-app/main/default/objects/Round__c/fields/Fri__c.field-meta.xml
<CustomField>
    <fullName>Fri__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fr</label>
    <type>Checkbox</type>
</CustomField>