force-app/main/default/objects/Round__c/fields/FriLoader__c.field-meta.xml
<CustomField>
    <fullName>FriLoader__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fl</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>