force-app/main/default/objects/Round__c/fields/FromTime__c.field-meta.xml
<CustomField>
    <fullName>FromTime__c</fullName>
    <label>FromTime</label>
    <length>5</length>
    <type>Text</type>
</CustomField>