force-app/main/default/objects/Round__c/fields/Is_Pret_Second_Round__c.field-meta.xml
<CustomField>
    <fullName>Is_Pret_Second_Round__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to highlight second pret dispatch to exclude them from round number calculations.</description>
    <label>Is Pret Second Round</label>
    <type>Checkbox</type>
</CustomField>