force-app/main/default/objects/Round__c/fields/IsActiveToday__c.field-meta.xml
<CustomField>
    <fullName>IsActiveToday__c</fullName>
    <formula>CASE(WEEKDAY(TODAY()),
    1, IF(Sun__c, 1, 0),
    2, IF(Mon__c, 1, 0),
    3, IF(Tue__c, 1, 0),
    4, IF(Wed__c, 1, 0),
    5, IF(Thu__c, 1, 0),
    6, IF(Fri__c, 1, 0),
    IF(Sat__c, 1, 0)) == 1</formula>
    <label>Active Today</label>
    <type>Checkbox</type>
</CustomField>