force-app/main/default/objects/Round__c/fields/IsSequencingEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsSequencingEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sequencing Enabled?</label>
    <type>Checkbox</type>
</CustomField>