force-app/main/default/objects/Round__c/fields/Lat__c.field-meta.xml
<CustomField>
    <fullName>Lat__c</fullName>
    <label>Lat</label>
    <precision>15</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>