force-app/main/default/objects/Round__c/fields/Loader_Required__c.field-meta.xml
<CustomField>
    <fullName>Loader_Required__c</fullName>
    <label>Loader Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>