force-app/main/default/objects/Round__c/fields/Long__c.field-meta.xml
<CustomField>
    <fullName>Long__c</fullName>
    <label>Long</label>
    <precision>15</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>