force-app/main/default/objects/Round__c/fields/Master_Round__c.field-meta.xml
<CustomField>
    <fullName>Master_Round__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to master round for pret rounds and similar. master round is the first &apos;dispatch&apos; of double rounds.</description>
    <inlineHelpText>Lookup to master round for pret rounds and similar. master round is the first &apos;dispatch&apos; of double rounds.</inlineHelpText>
    <label>Master_Round</label>
    <referenceTo>Round__c</referenceTo>
    <relationshipLabel>Round</relationshipLabel>
    <relationshipName>Round1</relationshipName>
    <type>Lookup</type>
</CustomField>