force-app/main/default/objects/Round__c/fields/Master_Round_Formula__c.field-meta.xml
<CustomField>
    <fullName>Master_Round_Formula__c</fullName>
    <description>Formula to link rounds to their master round. This is the weekday round or the AM dispatch of Pret Rounds.</description>
    <formula>IF(
  NOT(ISBLANK(Weekday_Round__c)),
  CASESAFEID(Weekday_Round__c),
  IF(
    NOT(ISBLANK(Master_Round__c)),
    CASESAFEID(Master_Round__c),
    CASESAFEID(Id)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Round (Formula)</label>
    <type>Text</type>
</CustomField>