force-app/main/default/objects/Round__c/fields/MOBA_Locations_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>MOBA_Locations_Last_Updated__c</fullName>
    <description>The last time the MOBA Locations were updated</description>
    <label>MOBA Locations Last Updated</label>
    <type>Date</type>
</CustomField>