force-app/main/default/objects/Round__c/fields/Mon__c.field-meta.xml
<CustomField>
    <fullName>Mon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mon</label>
    <type>Checkbox</type>
</CustomField>