force-app/main/default/objects/Round__c/fields/MonLoader__c.field-meta.xml
<CustomField>
    <fullName>MonLoader__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Ml</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>