force-app/main/default/objects/Round__c/fields/Num_Days__c.field-meta.xml
<CustomField>
    <fullName>Num_Days__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Master_Round__c)),
  0,
  IF(Mon__c, 1, 0) +
  IF(Tue__c, 1, 0) +
  IF(Wed__c, 1, 0) +
  IF(Thu__c, 1, 0) +
  IF(Fri__c, 1, 0) +
  IF(Sat__c, 1, 0) +
  IF(Sun__c, 1, 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Num Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>