force-app/main/default/objects/Round__c/fields/Ops_Round_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Ops_Round_Capacity__c</fullName>
    <description>Used to show if a round has capacity for additional collections.</description>
    <label>Ops Round Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Round has capacity</fullName>
                <default>true</default>
                <label>Round has capacity</label>
            </value>
            <value>
                <fullName>Maxed tonnage, capacity on time</fullName>
            </value>
            <value>
                <fullName>Maxed time,  capacity on tonnage</fullName>
            </value>
            <value>
                <fullName>Maxed tonnage and time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>