force-app/main/default/objects/Round__c/fields/Phase1TimedCollectionsInScope__c.field-meta.xml
<CustomField>
    <fullName>Phase1TimedCollectionsInScope__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this round in the first phase of time sensitive collections?</description>
    <label>Phase1TimedCollectionsInScope</label>
    <type>Checkbox</type>
</CustomField>