force-app/main/default/objects/Round__c/fields/Phase1TimedCollectionsStatus__c.field-meta.xml
<CustomField>
    <fullName>Phase1TimedCollectionsStatus__c</fullName>
    <label>Phase1TimedCollectionsStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not started</fullName>
            </value>
            <value>
                <fullName>Data gathering</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>