force-app/main/default/objects/Round__c/fields/Round_Active_From__c.field-meta.xml
<CustomField>
    <fullName>Round_Active_From__c</fullName>
    <label>Round Active From</label>
    <type>Date</type>
</CustomField>