force-app/main/default/objects/Round__c/fields/Round_Area__c.field-meta.xml
<CustomField>
    <fullName>Round_Area__c</fullName>
    <label>Round Area</label>
    <length>200</length>
    <type>Text</type>
</CustomField>