force-app/main/default/objects/Round__c/fields/Round_CS_ID__c.field-meta.xml
<CustomField>
    <fullName>Round_CS_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round CS ID</label>
    <type>Text</type>
</CustomField>