force-app/main/default/objects/Round__c/fields/Round_Diameter__c.field-meta.xml
<CustomField>
    <fullName>Round_Diameter__c</fullName>
    <label>Round Diameter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>