force-app/main/default/objects/Round__c/fields/Round_Notes__c.field-meta.xml
<CustomField>
    <fullName>Round_Notes__c</fullName>
    <description>Free text notes for the round. Pulls into Daily Dispatch.</description>
    <label>Round Notes</label>
    <type>TextArea</type>
</CustomField>