force-app/main/default/objects/Round__c/fields/Round_Region__c.field-meta.xml
<CustomField>
    <fullName>Round_Region__c</fullName>
    <description>Estimated area for round. Used to show capacity in an area.</description>
    <label>Round Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Central East</fullName>
            </value>
            <value>
                <fullName>Central West</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>North West</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>South Central</fullName>
            </value>
            <value>
                <fullName>South East</fullName>
            </value>
            <value>
                <fullName>South West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>