force-app/main/default/objects/Round__c/fields/Round_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Round_Schedule__c</fullName>
    <label>Round Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4 by 2</fullName>
            </value>
            <value>
                <fullName>2 on 2 off</fullName>
            </value>
            <value>
                <fullName>Mon-Fri</fullName>
            </value>
            <value>
                <fullName>Mon-Sat</fullName>
            </value>
            <value>
                <fullName>Mon-Sun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>