force-app/main/default/objects/Round__c/fields/Round_Type__c.field-meta.xml
<CustomField>
    <fullName>Round_Type__c</fullName>
    <label>Round Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PM Academy</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>DAY</fullName>
                <label>MIDNIGHT</label>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>PM + Loader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>