force-app/main/default/objects/Round__c/fields/RoundNo__c.field-meta.xml
<CustomField>
    <fullName>RoundNo__c</fullName>
    <externalId>true</externalId>
    <label>RoundNo</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>