force-app/main/default/objects/Round__c/fields/Sat__c.field-meta.xml
<CustomField>
    <fullName>Sat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sar</label>
    <type>Checkbox</type>
</CustomField>