force-app/main/default/objects/Round__c/fields/SatLoader__c.field-meta.xml
<CustomField>
    <fullName>SatLoader__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sal</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>