force-app/main/default/objects/Round__c/fields/Shift_Length__c.field-meta.xml
<CustomField>
    <fullName>Shift_Length__c</fullName>
    <description>Scheduled shift time in hours. Includes break.</description>
    <inlineHelpText>Scheduled shift time in hours. Includes break.</inlineHelpText>
    <label>Shift_Length</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>