force-app/main/default/objects/Round__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <length>100</length>
    <type>Text</type>
</CustomField>