force-app/main/default/objects/Round__c/fields/StartDepot__c.field-meta.xml
<CustomField>
    <fullName>StartDepot__c</fullName>
    <label>Start Depot</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>