force-app/main/default/objects/Round__c/fields/StartDepotIndex__c.field-meta.xml
<CustomField>
    <fullName>StartDepotIndex__c</fullName>
    <label>Start Depot Index</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>