force-app/main/default/objects/Round__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>Start Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>