force-app/main/default/objects/Round__c/fields/Sun__c.field-meta.xml
<CustomField>
    <fullName>Sun__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sun</label>
    <type>Checkbox</type>
</CustomField>