force-app/main/default/objects/Round__c/fields/SunLoader__c.field-meta.xml
<CustomField>
    <fullName>SunLoader__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sul</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>