force-app/main/default/objects/Round__c/fields/Thu__c.field-meta.xml
<CustomField>
    <fullName>Thu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thu</label>
    <type>Checkbox</type>
</CustomField>