force-app/main/default/objects/Round__c/fields/ThuLoader__c.field-meta.xml
<CustomField>
    <fullName>ThuLoader__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Thl</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>