force-app/main/default/objects/Round__c/fields/Tip_1__c.field-meta.xml
<CustomField>
    <fullName>Tip_1__c</fullName>
    <label>Tip 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tips</valueSetName>
    </valueSet>
</CustomField>