force-app/main/default/objects/Round__c/fields/Tip_2__c.field-meta.xml
<CustomField>
    <fullName>Tip_2__c</fullName>
    <label>Tip 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tips</valueSetName>
    </valueSet>
</CustomField>