force-app/main/default/objects/Round__c/fields/ToTime__c.field-meta.xml
<CustomField>
    <fullName>ToTime__c</fullName>
    <label>ToTime</label>
    <length>5</length>
    <type>Text</type>
</CustomField>