force-app/main/default/objects/Round__c/fields/Tue__c.field-meta.xml
<CustomField>
    <fullName>Tue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tue</label>
    <type>Checkbox</type>
</CustomField>