force-app/main/default/objects/Round__c/fields/TueLoader__c.field-meta.xml
<CustomField>
    <fullName>TueLoader__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TI</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>