force-app/main/default/objects/Round__c/fields/Vehicle_Category__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Category__c</fullName>
    <label>Vehicle Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bike Cage</fullName>
            </value>
            <value>
                <fullName>Compactor</fullName>
            </value>
            <value>
                <fullName>Panel</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>Vehicle Cage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>