force-app/main/default/objects/Round__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <formula>TEXT(Default_Vehicle__r.Body__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Type</label>
    <type>Text</type>
</CustomField>