force-app/main/default/objects/Round__c/fields/Wed__c.field-meta.xml
<CustomField>
    <fullName>Wed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wr</label>
    <type>Checkbox</type>
</CustomField>