force-app/main/default/objects/Round__c/fields/WedLoader__c.field-meta.xml
<CustomField>
    <fullName>WedLoader__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Wl</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>