force-app/main/default/objects/Round__c/fields/Weekday_Round__c.field-meta.xml
<CustomField>
    <fullName>Weekday_Round__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to link weekend rounds to their matched weekday round. Used for Power BI analysis</description>
    <inlineHelpText>Used to link weekend rounds to their matched weekday round. Used for Power BI analysis</inlineHelpText>
    <label>Weekday Round</label>
    <referenceTo>Round__c</referenceTo>
    <relationshipLabel>Round</relationshipLabel>
    <relationshipName>Round</relationshipName>
    <type>Lookup</type>
</CustomField>