force-app/main/default/objects/Round__c/fields/X2nd_Driver__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2nd Driver</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Round (2nd Driver)</relationshipLabel>
    <relationshipName>Round1</relationshipName>
    <type>Lookup</type>
</CustomField>