force-app/main/default/objects/Round__c/fields/X2nd_Tip_Waste__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Tip_Waste__c</fullName>
    <label>2nd Tip Waste</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tips</valueSetName>
    </valueSet>
</CustomField>