force-app/main/default/objects/Round__c/validationRules/RequireDepots.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireDepots</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(Round_Type__c, &apos;AM&apos;), ISPICKVAL(Round_Type__c, &apos;PM&apos;)), OR(ISBLANK(StartDepot__c), ISBLANK(EndDepot__c)))</errorConditionFormula>
    <errorMessage>Start Depot &amp; End Depot are required on AM or PM rounds.</errorMessage>
</ValidationRule>