force-app/main/default/objects/Round__c/validationRules/RestrictNameLength.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictNameLength</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Name) &gt; 68</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Round name should not exceed 68 characters.</errorMessage>
</ValidationRule>