force-app/main/default/objects/Round__c/validationRules/RestrictStartTimeFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictStartTimeFormat</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR(ISBLANK(StartTime__c), REGEX(StartTime__c, &apos;[0-2][0-9]:[0-5][0-9]&apos;)))</errorConditionFormula>
    <errorDisplayField>StartTime__c</errorDisplayField>
    <errorMessage>Start Time must be in the 24hr format HH:MM.</errorMessage>
</ValidationRule>