force-app/main/default/objects/Round__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Round_Schedule__c</columns>
    <columns>RoundNo__c</columns>
    <columns>Round_Type__c</columns>
    <columns>Default_Driver__c</columns>
    <columns>Default_Vehicle__c</columns>
    <columns>Bin_Weighing__c</columns>
    <columns>Mon__c</columns>
    <columns>Tue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>