force-app/main/default/objects/Round__c/listViews/Rounds_and_Drivers.listView-meta.xml
<ListView>
    <fullName>Rounds_and_Drivers</fullName>
    <columns>NAME</columns>
    <columns>Round_Schedule__c</columns>
    <columns>Default_Driver__c</columns>
    <columns>X2nd_Driver__c</columns>
    <columns>Num_Missing_Drivers__c</columns>
    <filterScope>Everything</filterScope>
    <label>Rounds and Drivers</label>
</ListView>